commit main menu