@@ -19,7 +19,7 @@ public class ScrollTextView extends TextView {
     private Scroller mSlr;
 
     // milliseconds for a round of scrolling
-    private int mRndDuration = 60000;
+    private double mRndDuration;
 
     // the X offset when paused
     private int mXPaused = 0;
@@ -91,7 +91,7 @@ public class ScrollTextView extends TextView {
 
         int scrollingLen = calculateScrollingLen();
         int distance = scrollingLen - (getWidth() + mXPaused);
-        int duration = (new Double(mRndDuration * distance * 1.00000
+        int duration = (Double.valueOf(mRndDuration * distance * 1.00000
                 / scrollingLen)).intValue();
 
         setVisibility(VISIBLE);
@@ -154,36 +154,36 @@ public int getPozition (){
         }
     }
 
-    public int getRndDuration() {
+    public double getRndDuration() {
         return mRndDuration;
     }
 
-    public void setRndDuration(int progress, int StringLength) {
-        int time=60000;
+    public void setRndDuration(int progress, double StringLength) {
+        double time=60000;
         switch (progress){
             case 0:this.mRndDuration=time*(StringLength/900);break;
-            case 1:this.mRndDuration=time*(StringLength/950);break;
-            case 2:this.mRndDuration=time*(StringLength/1000);break;
-            case 3:this.mRndDuration=time*(StringLength/1050);break;
-            case 4:this.mRndDuration=time*(StringLength/1100);break;
-            case 5:this.mRndDuration=time*(StringLength/1150);break;
-            case 6:this.mRndDuration=time*(StringLength/1200);break;
-            case 7:this.mRndDuration=time*(StringLength/1250);break;
-            case 8:this.mRndDuration=time*(StringLength/1300);break;
-            case 9:this.mRndDuration=time*(StringLength/1350);break;
-            case 10:this.mRndDuration=time*(StringLength/1400);break;
-            case 11:this.mRndDuration=time*(StringLength/1450);break;
-            case 12:this.mRndDuration=time*(StringLength/1500);break;
-            case 13:this.mRndDuration=time*(StringLength/1550);break;
-            case 14:this.mRndDuration=time*(StringLength/1600);break;
-            case 15:this.mRndDuration=time*(StringLength/1650);break;
-            case 16:this.mRndDuration=time*(StringLength/1700);break;
-            case 17:this.mRndDuration=time*(StringLength/1750);break;
-            case 18:this.mRndDuration=time*(StringLength/1800);break;
+            case 1:this.mRndDuration=time*(StringLength/1000);break;
+            case 2:this.mRndDuration=time*(StringLength/1100);break;
+            case 3:this.mRndDuration=time*(StringLength/1200);break;
+            case 4:this.mRndDuration=time*(StringLength/1300);break;
+            case 5:this.mRndDuration=time*(StringLength/1400);break;
+            case 6:this.mRndDuration=time*(StringLength/1500);break;
+            case 7:this.mRndDuration=time*(StringLength/1600);break;
+            case 8:this.mRndDuration=time*(StringLength/1700);break;
+            case 9:this.mRndDuration=time*(StringLength/1800);break;
+            case 10:this.mRndDuration=time*(StringLength/1900);break;
+            case 11:this.mRndDuration=time*(StringLength/2000);break;
+            case 12:this.mRndDuration=time*(StringLength/2100);break;
+            case 13:this.mRndDuration=time*(StringLength/2200);break;
+            case 14:this.mRndDuration=time*(StringLength/2300);break;
+            case 15:this.mRndDuration=time*(StringLength/2400);break;
+            case 16:this.mRndDuration=time*(StringLength/2500);break;
+            case 17:this.mRndDuration=time*(StringLength/2600);break;
+            case 18:this.mRndDuration=time*(StringLength/2700);break;
             case 19:this.mRndDuration=time*(StringLength/3000);break;
             case 20:this.mRndDuration=time*(StringLength/5000);break;
             case 21:this.mRndDuration=time*(StringLength/10000);break;
-            default:this.mRndDuration=time*(StringLength/900);break;
+//            default:this.mRndDuration=time*(StringLength/900);break;
         }
 //        this.mRndDuration = duration;
     }
